pkg/ibmvpc/examples/out/explain_out/vpeToIksNodeSubsetRules_all_vpcs_explain_debug.txt
Explaining connectivity from 192.168.40.5 to 192.168.0.4 within ky-test-vpc using "protocol: TCP"
Interpreted source: iks-clusterid:1[192.168.40.5]
Interpreted destination: iks-node[192.168.0.4]
=================================================================================================

Connections are allowed from iks-clusterid:1[192.168.40.5] to iks-node[192.168.0.4] using "protocol: TCP dst-ports: 30000-32767"
(note that not all queried protocols/ports are allowed)

Path:
	iks-clusterid:1[192.168.40.5] -> security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 -> ky-test-edge-subnet-3 -> network ACL ky-test-edge-acl -> 
	network ACL ky-test-private-2-others-acl -> ky-test-private-subnet-1 -> security group[kube-clusterid:1, ky-test-default-sg] -> iks-node[192.168.0.4]


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Egress:
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			index: 0, direction: outbound,  conns: protocol: tcp,  dstPorts: 30000-32767, remote: 0.0.0.0/0, local: 0.0.0.0/0
		network ACL ky-test-edge-acl allows connection with the following allow rules
			index: 1, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	Ingress:
		network ACL ky-test-private-2-others-acl allows connection with the following allow rules
			index: 0, direction: inbound , src: 192.168.32.0/20 , dst: 0.0.0.0/0, conn: all, action: allow
		security group kube-clusterid:1 allows connection with the following allow rules
			index: 3, direction: inbound,  conns: protocol: tcp,  dstPorts: 30000-32767, remote: 0.0.0.0/0, local: 0.0.0.0/0
		security group ky-test-default-sg allows connection with the following allow rules
			index: 2, direction: inbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0

TCP response is enabled; The relevant rules are:
	Egress:
		network ACL ky-test-private-2-others-acl allows connection with the following allow rules
			index: 4, direction: outbound , src: 0.0.0.0/0 , dst: 192.168.32.0/20, conn: all, action: allow

	Ingress:
		network ACL ky-test-edge-acl allows connection with the following allow rules
			index: 0, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------

* Analysis of the connectivity of cluster worker nodes is under the assumption that the only security groups applied to them are the VPC default and the IKS generated SG
